# bg-test-data

./: .gitignore  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 1058ce2581ad5e93.json  105afe4269920b1e.json  109e9c3bdb67859b.json  109ecf49f99f0ed3.json  10aa674c87b4f010.json  10aff14a68db2dd3.json  10b1028d9b59b1dc.json  10c64858de04248.json  10fb5117ca0c989a.json  113f461fc70132b6.json  116f7816f3cfd485.json  118d0b03cfcf6283.json  11c5805fabe6a7fb.json  120eb6f7a7da040c.json  1211009f8cef90e6.json  12318cd1a77cd8bd.json  12381a47283223bc.json  1247a970f33305db.json  126fec8d473baec9.json  129566b0ddc4bcf9.json  12f8affe82ee6702.json  130f1a951494783d.json  139c14a4d73c0da8.json  13c2d1ccd560f3c.json  140ee2ac1c5a24f9.json  143d56219e16e58.json  144b24a55877f775.json  14a0b8150c9d6f49.json  14ba707814097a5c.json  14bf780f3933e7fe.json  14cc6960669433e4.json  14ea657e607e948f.json  15681ac02a5517ec.json  159ea7b6504869b0.json  15a2d7c4d33fd4a6.json  160ad2c6466c2e28.json  16218a1017d07258.json  164c53e8a2240d74.json  164dad4042c8fa1d.json  169eccad56116a45.json  (+1272 more)
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
src/bg_test_data/: __init__.py  _random.py  address.py  cli.py  company.py  egn.py  eik.py  export.py  iban.py  names.py  person.py  phone.py  providers.py
src/bg_test_data/_data/: bank_codes.py  cities.py  first_names_female.py  first_names_male.py  last_names.py  streets.py
tests/: conftest.py  test_address.py  test_cli.py  test_company.py  test_egn.py  test_eik.py  test_export.py  test_iban.py  test_names.py  test_person.py  test_phone.py  test_providers.py  test_random.py
widgets/: behaviors.json  duration.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
